<resources>
    <string name="app_name">DrAppoint-Doctor</string>
    <string name="next">Next</string>
    <string name="login">Login</string>
    <string name="title_activity_core">CoreActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="create_account_signin">Create an account or login now!</string>
    <string name="terms_and_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="email_and_password">Email and password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="new_here">New here?</string>
    <string name="register_now">Register now!</string>
    <string name="by_creating_an_account_you_agree_on">By creating an account, you agree on our</string>
    <string name="invalid_email">Invalid email</string>
    <string name="insufficient_password">Password must contain at least 8 letters</string>
    <string name="register">Register</string>
    <string name="already_registered">Already registered?</string>
    <string name="set_up_profile">Set up profile</string>
    <string name="name_phone">Name and phone number</string>
    <string name="name">Name</string>
    <string name="phone">Phone number</string>
    <string name="finish">Finish</string>
    <string name="name_unspecified">Name must be specified</string>
    <string name="name_not_number">Name must not contains digits</string>
    <string name="insufficient_phone_number">Phone number must be at least 10 digits</string>
    <string name="address_unspecified">Address must be specified</string>
    <string name="address">Address</string>
    <string name="invalid_input">Invalid input</string>
    <string name="title_profile">Profile</string>
    <string name="sign_out">Sign out</string>
    <string name="menu_settings">Settings</string>
    <string name="specialty">Specialty</string>
    <string name="sunday">Sunday</string>
    <string name="random_schedule">8:00-16:00</string>
    <string name="saturday">Saturday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="closed">Closed</string>
    <string name="make_an_appointment">Make an appointment</string>
    <string name="pick_a_date">Pick a date</string>
    <string name="random_date">22-09-2020</string>
    <string name="confirm">Confirm</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="random_time">8:00</string>
    <string name="check">Check</string>
    <string name="reservations">Reservations</string>
    <string name="confirmed">CONFIRMED</string>
    <string name="max">10</string>
    <string name="max_patients">Max: 10</string>
    <string name="title_doctors">Doctors</string>
    <string name="title_history">History</string>
    <string name="title_appointments">Appointments</string>
    <string name="random_specialty">Dermatologist</string>
    <string name="delete">Delete</string>
    <string name="from">from</string>
    <string name="team_name">Monks</string>
    <string name="city">City</string>
    <string name="schedule">Schedule</string>
    <string name="max_patients_per_day">Max patients per day</string>
    <string name="save">Save</string>
    <string name="if_a_day_is_empty_it_implies_that_it_is_closed">If a day is empty, it implies that it is closed</string>
    <string name="city_unspecified">City must be specified</string>
    <string name="schedule_unspecified">Schedule must be specified</string>
    <string name="specialty_unspecified">Specialty must be specified</string>
    <string name="address_city">Address, city</string>
    <string name="patients_booked_for">Patients booked for</string>
    <string name="title_patients">Patients</string>
    <string name="no_patients_for_this_date">No patients for this date</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="not_on_vacation">Not on Vacation</string>
    <string name="on_vacation">On Vacation</string>
    <string name="patients_cannot_book_appointment_as_you_are_currently_on_vacation">Patients cannot book appointment, as you are currently on vacation</string>
</resources>
