<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.entry.SetProfileActivity"
    android:background="@drawable/white_background_rounded_border">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/errorTV"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="12sp"
            android:textColor="#ffffff"
            android:background="#EE0000"
            android:text="ERROR"
            android:textStyle="bold"
            android:gravity="center"
            android:elevation="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_up_profile"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/form"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <LinearLayout
            android:id="@+id/form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="10dp"
            android:elevation="20dp"
            android:background="@drawable/white_background_rounded_border"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5">


            <EditText
                android:id="@+id/nameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="12"
                android:hint="@string/name"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center"
                android:inputType="textPersonName"/>

            <EditText
                android:id="@+id/specialtyET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="12"
                android:hint="@string/specialty"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center"
                android:inputType="text"/>

            <EditText
                android:id="@+id/phoneET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="12"
                android:hint="@string/phone"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center"
                android:inputType="phone"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center">
                <EditText
                    android:paddingStart="10dp"
                    android:id="@+id/addressET"
                    android:layout_width="0dp"
                    android:layout_weight="0.7"
                    android:layout_height="wrap_content"
                    android:ems="12"
                    android:hint="@string/address"
                    android:inputType="text"/>
                <EditText
                    android:paddingEnd="10dp"
                    android:id="@+id/cityET"
                    android:layout_width="0dp"
                    android:layout_weight="0.3"
                    android:layout_height="wrap_content"
                    android:ems="12"
                    android:hint="@string/city"
                    android:inputType="text"/>
            </LinearLayout>

            <TextView
                android:onClick="showSchedule"
                android:id="@+id/scheduleTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/schedule"
                android:layout_marginBottom="10dp"
                android:textColor="#ffffff"
                android:background="#ff0000"
                android:padding="10dp"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/finishButton"
                android:text="@string/finish"
                android:textSize="18sp"
                android:textColor="#FFFFFF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/special_background_rounded_border"
                android:onClick="finishRegister"/>
        </LinearLayout>



        <TextView
            android:id="@+id/accepting_terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by_creating_an_account_you_agree_on"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.92"/>

        <TextView
            android:id="@+id/termsAndConditions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terms_and_conditions"
            android:textAlignment="center"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/accepting_terms"
            app:layout_constraintVertical_bias="0.263"
            android:onClick="toTermsAndConditions"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/shadeLL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        android:alpha="0.5"
        android:orientation="horizontal"/>
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/scheduleLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:background="@drawable/white_background_rounded_border"
        android:layout_margin="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingEnd="10dp"
            android:paddingStart="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/max_patients_per_day"
                android:textColor="#000000"
                android:layout_marginEnd="10dp"/>
            <EditText
                android:id="@+id/maxET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="10"
                android:gravity="center_horizontal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/white_background_border"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/if_a_day_is_empty_it_implies_that_it_is_closed"
            android:textColor="@color/white"
            android:background="#000000"
            android:gravity="center_horizontal"
            android:textSize="14sp"
            android:textStyle="bold"
            android:padding="5dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="wrap_content"
                android:text="@string/sunday"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textColor="#000000"
                android:textSize="14sp"/>
            <EditText
                android:id="@+id/sundayStart"
                android:layout_width="0dp"
                android:layout_weight="0.35"
                android:layout_height="wrap_content"
                android:hint="08:00"
                android:gravity="center_horizontal"/>
            <EditText
                android:id="@+id/sundayEnd"
                android:layout_width="0dp"
                android:layout_weight="0.35"
                android:layout_height="wrap_content"
                android:hint="16:00"
                android:gravity="center_horizontal"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="wrap_content"
                android:text="@string/monday"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textColor="#000000"
                android:textSize="14sp"/>
            <EditText
                android:id="@+id/mondayStart"
                android:layout_width="0dp"
                android:layout_weight="0.35"
                android:layout_height="wrap_content"
                android:hint="08:00"
                android:gravity="center_horizontal"/>
            <EditText
                android:id="@+id/mondayEnd"
                android:layout_width="0dp"
                android:layout_weight="0.35"
                android:layout_height="wrap_content"
                android:hint="16:00"
                android:gravity="center_horizontal"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="wrap_content"
                android:text="@string/tuesday"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textColor="#000000"
                android:textSize="14sp"/>
            <EditText
                android:id="@+id/tuesdayStart"
                android:layout_width="0dp"
                android:layout_weight="0.35"
                android:layout_height="wrap_content"
                android:hint="08:00"
                android:gravity="center_horizontal"/>
            <EditText
                android:id="@+id/tuesdayEnd"
                android:layout_width="0dp"
                android:layout_weight="0.35"
                android:layout_height="wrap_content"
                android:hint="16:00"
                android:gravity="center_horizontal"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="wrap_content"
                android:text="@string/wednesday"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textColor="#000000"
                android:textSize="14sp"/>
            <EditText
                android:id="@+id/wednesdayStart"
                android:layout_width="0dp"
                android:layout_weight="0.35"
                android:layout_height="wrap_content"
                android:hint="08:00"
                android:gravity="center_horizontal"/>
            <EditText
                android:id="@+id/wednesdayEnd"
                android:layout_width="0dp"
                android:layout_weight="0.35"
                android:layout_height="wrap_content"
                android:hint="16:00"
                android:gravity="center_horizontal"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="wrap_content"
                android:text="@string/thursday"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textColor="#000000"
                android:textSize="14sp"/>
            <EditText
                android:id="@+id/thursdayStart"
                android:layout_width="0dp"
                android:layout_weight="0.35"
                android:layout_height="wrap_content"
                android:hint="08:00"
                android:gravity="center_horizontal"/>
            <EditText
                android:id="@+id/thursdayEnd"
                android:layout_width="0dp"
                android:layout_weight="0.35"
                android:layout_height="wrap_content"
                android:hint="16:00"
                android:gravity="center_horizontal"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="wrap_content"
                android:text="@string/friday"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textColor="#000000"
                android:textSize="14sp"/>
            <EditText
                android:id="@+id/fridayStart"
                android:layout_width="0dp"
                android:layout_weight="0.35"
                android:layout_height="wrap_content"
                android:hint="08:00"
                android:gravity="center_horizontal"/>
            <EditText
                android:id="@+id/fridayEnd"
                android:layout_width="0dp"
                android:layout_weight="0.35"
                android:layout_height="wrap_content"
                android:hint="16:00"
                android:gravity="center_horizontal"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="wrap_content"
                android:text="@string/saturday"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textColor="#000000"
                android:textSize="14sp"/>
            <EditText
                android:id="@+id/saturdayStart"
                android:layout_width="0dp"
                android:layout_weight="0.35"
                android:layout_height="wrap_content"
                android:hint="08:00"
                android:gravity="center_horizontal"/>
            <EditText
                android:id="@+id/saturdayEnd"
                android:layout_width="0dp"
                android:layout_weight="0.35"
                android:layout_height="wrap_content"
                android:hint="16:00"
                android:gravity="center_horizontal"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/white_background_border"/>
        <Button
            android:id="@+id/saveScheduleButton"
            android:layout_marginTop="10dp"
            android:text="@string/save"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/grey_background_rounded_border"
            android:onClick="saveSchedule"/>
    </LinearLayout>


</RelativeLayout>