<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/onVacationIV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/patients_cannot_book_appointment_as_you_are_currently_on_vacation"
            android:textColor="@color/white"
            android:background="#FF0000"
            android:gravity="center"
            android:padding="5dp"
            android:textSize="14sp"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/white_background_border">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/patients_booked_for"
                android:textColor="#000000"
                android:textSize="16sp"
                android:layout_marginEnd="10dp"/>
            <TextView
                android:id="@+id/dateTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/random_date"
                android:textSize="16sp"
                android:background="@drawable/special_background_rounded_border"
                android:textColor="@color/white"
                android:padding="10dp"/>
        </LinearLayout>
        <TextView
            android:visibility="gone"
            android:id="@+id/emptyListTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_patients_for_this_date"
            android:gravity="center_horizontal"
            android:textSize="14sp"
            android:textColor="#000000"/>
        <ListView
            android:id="@+id/patientsLV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/shadeLL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#000000"
        android:alpha="0.5"
        android:visibility="gone"/>
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/patientLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:background="@drawable/white_background_rounded_border">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_person"/>
            <TextView
                android:id="@+id/nameTV"
                android:layout_width="0dp"
                android:layout_weight="0.6"
                android:layout_height="40dp"
                android:text="@string/name"
                android:textSize="14sp"
                android:textColor="#000000"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"/>
            <ImageView
                android:id="@+id/closeIV"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_close"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_email"/>
            <TextView
                android:id="@+id/emailTV"
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_height="40dp"
                android:text="@string/email"
                android:textSize="14sp"
                android:textColor="#000000"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_phone"/>
            <TextView
                android:id="@+id/phoneTV"
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_height="40dp"
                android:text="@string/phone"
                android:textSize="14sp"
                android:textColor="#000000"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_map_marker"/>
            <TextView
                android:id="@+id/addressTV"
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_height="40dp"
                android:text="@string/address"
                android:textSize="14sp"
                android:textColor="#000000"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"/>
        </LinearLayout>
    </LinearLayout>



</RelativeLayout>